feat: links and preview

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -75,6 +75,20 @@ Each of these composables helps you build a high-quality and accessible form con
   />
   <PreviewCard
     client:idle
+    title="Calendars"
+    description="Allows users to select a date from a calendar."
+    link="/guides/fields/calendars/"
+    src="/thumbs/calendar.mp4"
+  />
+  <PreviewCard
+    client:idle
+    title="Date Fields"
+    description="Allows users to enter a date."
+    link="/guides/fields/date-fields/"
+    src="/thumbs/date.mp4"
+  />
+  <PreviewCard
+    client:idle
     title="Hidden Fields"
     description="Useful for tokens, IDs, and other values that are only relevant to the server."
     link="/guides/fields/hidden-fields/"
