feat: calendar docs improvements

--- a/src/content/docs/guides/fields/_partials/_calendarPartial.mdx
+++ b/src/content/docs/guides/fields/_partials/_calendarPartial.mdx
@@ -1,4 +1,4 @@
-```vue collapse={85-176}
+```vue collapse={87-183}
 <script setup lang="ts">
 import { useCalendar, CalendarCell, type CalendarProps } from '@formwerk/core';
 
@@ -12,6 +12,8 @@ const {
   gridLabelProps,
   gridLabel,
   currentView,
+  errorMessage,
+  errorMessageProps,
 } = useCalendar(props);
 </script>
 
