feat: finalize otp field docs

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -89,6 +89,13 @@ Each of these composables helps you build a high-quality and accessible form con
   />
   <PreviewCard
     client:idle
+    title="OTP Fields"
+    description="Allows users to enter a one-time password."
+    link="/guides/fields/otp-fields/"
+    src="/thumbs/otp.mp4"
+  />
+  <PreviewCard
+    client:idle
     title="Hidden Fields"
     description="Useful for tokens, IDs, and other values that are only relevant to the server."
     link="/guides/fields/hidden-fields/"
