--- a/src/content/docs/guides/fields/otp-fields.mdx
+++ b/src/content/docs/guides/fields/otp-fields.mdx
@@ -29,6 +29,7 @@ OTP fields are used to allow users to input a one-time password or a code. Usual
 - Comprehensively supports keyboard navigation.
 - Auto management of focus during user interaction.
 - Handles paste events.
+- Auto submit on completion.
 
 ### Keyboard Features
 
