--- a/src/content/docs/guides/getting-started.mdx
+++ b/src/content/docs/guides/getting-started.mdx
@@ -29,18 +29,26 @@ This library aims to offer an uncompromising new baseline of accessibility, inte
 
     </TabItem>
 
-    <TabItem label="yarn" icon="seti:yarn">
-
-    ```bash
-    yarn add @formwerk/core
-    ```
-
-    </TabItem>
-
     <TabItem label="pnpm" icon="pnpm">
 
     ```bash
     pnpm add @formwerk/core
+    ```
+
+    </TabItem>
+
+    <TabItem label="bun" icon="bun">
+
+    ```bash
+    bun add @formwerk/core
+    ```
+
+    </TabItem>
+
+    <TabItem label="yarn" icon="seti:yarn">
+
+    ```bash
+    yarn add @formwerk/core
     ```
 
     </TabItem>
